# substrate

./: .release-please-manifest.json
codegen/: CHANGELOG.md  Cargo.toml
docs/examples/: CHANGELOG.md  Cargo.toml
examples/sky130_inverter/: Cargo.toml
examples/sky130_inverter/src/: lib.rs  tb.rs
libs/enumify/: CHANGELOG.md
libs/enumify_macros/: CHANGELOG.md  Cargo.toml
libs/geometry/: CHANGELOG.md  Cargo.toml
libs/nutlex/: CHANGELOG.md  Cargo.toml
libs/scir/: CHANGELOG.md  Cargo.toml
libs/spice/: CHANGELOG.md  Cargo.toml
pdks/sky130pdk/: CHANGELOG.md  Cargo.toml
substrate/: CHANGELOG.md  Cargo.toml
substrate/src/: context.rs
substrate/src/schematic/: mod.rs
substrate/src/simulation/: mod.rs
tests/: Cargo.toml
tools/ngspice/: CHANGELOG.md  Cargo.toml
tools/spectre/: CHANGELOG.md  Cargo.toml
