[package]
name = "spectre"
version = "0.7.0"
edition = "2021"

[dependencies]
rust_decimal = "1.31"
rust_decimal_macros = "1.31"
thiserror = "1"
arcstr = { version = "1", features = [ "serde" ] }
tera = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
indexmap = { version = "2", features = ["serde"] }

cache = { version = "0.3.1", registry = "substrate", path = "../../libs/cache" }
scir = { version = "0.6.0", registry = "substrate", path = "../../libs/scir" }
nutlex = { version = "0.2.0", registry = "substrate", path = "../../libs/nutlex" }
substrate = { version = "0.7.0", registry = "substrate", path = "../../substrate" }

